# agent-sync

./: LICENSE  README.md  README_CN.md  pyproject.toml
docs/: CONFIG_GUIDE.md  CONFIG_GUIDE_EN.md
examples/universal-agent/: identity.yaml  routing.yaml  soul.yaml  user.yaml
src/agent_sync/: __init__.py  cli.py
src/agent_sync/adapters/: base.py  claude_code.py  codex.py  cursor.py  openclaw.py
src/agent_sync/core/: detector.py  memory_schema.py  reflector.py  schema.py  syncer.py
src/agent_sync/templates/claude_code/: CLAUDE.global.md.j2  CLAUDE.md.j2
src/agent_sync/templates/codex/: AGENTS.md.j2
src/agent_sync/templates/cursor/: directive.mdc.j2  identity.mdc.j2  soul.mdc.j2  user.mdc.j2
src/agent_sync/templates/openclaw/: IDENTITY.md.j2  MEMORY.md.j2  SOUL.md.j2  USER.md.j2
tests/: test_schema.py
